Finished function argument cleanup.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ cmake_minimum_required(VERSION 2.8)
 project(ArduinoExample C CXX)
 
 option(TEST "Enable testing" ON)
-option(DEBUG "Enable debug" ON)
+option(DEBUG "Enable debug" OFF)
 
 # modify flags from default toolchain flags
 set(APM_OPT_FLAGS "-Wformat -Wall -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings -Wformat=2")
@@ -38,29 +38,29 @@ generate_arduino_firmware(
     PORT /dev/ttyUSB0
     NO_AUTOLIBS)
 
-#generate_arduino_example(
-    #EXAMPLE SoftwareSerialExample
-    #BOARD mega2560
-    #LIBRARY SoftwareSerial
-    #PORT /dev/ttyUSB0)
+generate_arduino_example(
+    EXAMPLE SoftwareSerialExample
+    BOARD mega2560
+    LIBRARY SoftwareSerial
+    PORT /dev/ttyUSB0)
 
 if (TEST)
-    #generate_arduino_firmware(
-        #FIRMWARE Blink2
-        #SKETCH ${CMAKE_SOURCE_DIR}/test/Blink2
-        #BOARD mega
-        #PORT /dev/ttyUSB0)
+    generate_arduino_firmware(
+        FIRMWARE Blink2
+        SKETCH ${CMAKE_SOURCE_DIR}/test/Blink2
+        BOARD mega
+        PORT /dev/ttyUSB0)
 
-    #generate_arduino_firmware(
-        #FIRMWARE ArduPlane
-        #SKETCH ${CMAKE_SOURCE_DIR}/test/ArduPlane
-        #BOARD mega2560
-        #PORT /dev/ttyUSB0)
+    generate_arduino_firmware(
+        FIRMWARE ArduPlane
+        SKETCH ${CMAKE_SOURCE_DIR}/test/ArduPlane
+        BOARD mega2560
+        PORT /dev/ttyUSB0)
 
-    #generate_arduino_firmware(
-        #FIRMWARE ArduCopter
-        #SKETCH ${CMAKE_SOURCE_DIR}/test/ArduCopter
-        #BOARD mega
-        #PORT /dev/ttyUSB0)
+    generate_arduino_firmware(
+        FIRMWARE ArduCopter
+        SKETCH ${CMAKE_SOURCE_DIR}/test/ArduCopter
+        BOARD mega
+        PORT /dev/ttyUSB0)
 
 endif()
