Desktop build working for simple sketch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,31 +31,18 @@ if (DEBUG)
 endif()
 
 # projects
+
+#file(GLOB APM_DESKTOP_SUPPORT_SRCS "${CMAKE_SOURCE_DIR}/libraries/Desktop/support/*")
+
 generate_arduino_firmware(
     FIRMWARE Blink
     SKETCH ${CMAKE_SOURCE_DIR}/example/Blink
     BOARD mega2560
     PORT /dev/ttyUSB0
-    DESKTOP_SRCS 
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/Arduino.cpp
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/DataFlash_APM1.cpp
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/desktop.h
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/digital.c
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/eeprom.c
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/FastSerial.cpp
+    DESKTOP_SRCS
         ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/main.cpp
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/Print.cpp
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/sitl_adc.cpp
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/sitl_adc.h
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/sitl_barometer.cpp
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/sitl_compass.cpp
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/sitl.cpp
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/sitl_gps.cpp
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/sitl_rc.h
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/SPI.cpp
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/util.cpp
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/util.h
-        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/WString.cpp
+        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/Arduino.cpp
+        #${CMAKE_SOURCE_DIR}/libraries/Desktop/support/FastSerial.cpp
     DESKTOP_COMPILE_FLAGS "-I${CMAKE_SOURCE_DIR}/libraries/Desktop/include -DSKETCH=\\\"Blink\\\""
     NO_AUTOLIBS)
 
@@ -66,12 +53,14 @@ generate_arduino_firmware(
     #PORT /dev/ttyUSB0)
 
 if (TEST)
+
     #generate_arduino_firmware(
         #FIRMWARE Blink2
         #SKETCH ${CMAKE_SOURCE_DIR}/test/Blink2
         #BOARD mega
         #PORT /dev/ttyUSB0)
 
+    #message(STATUS "${APM_DESKTOP_SUPPORT_SRCS}")
     #generate_arduino_firmware(
         #FIRMWARE ArduPlane
         #SKETCH ${CMAKE_SOURCE_DIR}/test/ArduPlane
@@ -80,9 +69,9 @@ if (TEST)
             #I2C/I2C.cpp
             #DataFlash/DataFlash_APM1.cpp
             #FastSerial/FastSerial.cpp
-            #FastSerial/vprintf.cpp
             #AP_Compass/AP_Compass_HMC5843.cpp
             #AP_Baro/AP_Baro_BMP085.cpp
+        #DESKTOP_SRCS ${APM_DESKTOP_SUPPORT_SRCS}
         #PORT /dev/ttyUSB0)
 
     #generate_arduino_firmware(
