--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ endif()
 
 # projects
 
-#file(GLOB APM_DESKTOP_SUPPORT_SRCS "${CMAKE_SOURCE_DIR}/libraries/Desktop/support/*")
+file(GLOB APM_DESKTOP_SUPPORT_SRCS "${CMAKE_SOURCE_DIR}/libraries/Desktop/support/*")
 
 generate_arduino_firmware(
     FIRMWARE Blink
@@ -43,17 +43,17 @@ generate_arduino_firmware(
     DESKTOP_SRCS
         ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/main.cpp
         ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/Arduino.cpp
-        #${CMAKE_SOURCE_DIR}/libraries/Desktop/support/FastSerial.cpp
+        ${CMAKE_SOURCE_DIR}/libraries/Desktop/support/FastSerial.cpp
     DESKTOP_COMPILE_FLAGS "-I${CMAKE_SOURCE_DIR}/libraries/Desktop/include -DSKETCH=\\\"Blink\\\""
     NO_AUTOLIBS
     )
 
-generate_arduino_example(
-    EXAMPLE SoftwareSerialExample
-    BOARD mega2560
-    LIBRARY SoftwareSerial
-    PORT /dev/ttyUSB0
-    )
+#generate_arduino_example(
+    #EXAMPLE SoftwareSerialExample
+    #BOARD mega2560
+    #LIBRARY SoftwareSerial
+    #PORT /dev/ttyUSB0
+    #)
 
 if (TEST)
 
@@ -64,18 +64,19 @@ if (TEST)
         #PORT /dev/ttyUSB0)
 
     #message(STATUS "${APM_DESKTOP_SUPPORT_SRCS}")
-    #generate_arduino_firmware(
-        #FIRMWARE ArduPlane
-        #SKETCH ${CMAKE_SOURCE_DIR}/test/ArduPlane
-        #BOARD mega2560
+    generate_arduino_firmware(
+        FIRMWARE ArduPlane
+        SKETCH ${CMAKE_SOURCE_DIR}/test/ArduPlane
+        BOARD mega2560
+        #DESKTOP
         #DESKTOP_IGNORE
             #I2C/I2C.cpp
             #DataFlash/DataFlash_APM1.cpp
             #FastSerial/FastSerial.cpp
             #AP_Compass/AP_Compass_HMC5843.cpp
             #AP_Baro/AP_Baro_BMP085.cpp
-        #DESKTOP_SRCS ${APM_DESKTOP_SUPPORT_SRCS}
-        #PORT /dev/ttyUSB0)
+        DESKTOP_SRCS ${APM_DESKTOP_SUPPORT_SRCS}
+        PORT /dev/ttyUSB0)
 
     #generate_arduino_firmware(
         #FIRMWARE ArduCopter
