Make it possible to set arduino sdk via commandl line.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@
 # Description: Arduino CMake example                                          #
 #                                                                             #
 #=============================================================================#
+configure_file(cmake/ArduinoSystemConfig.cmake.in ArduinoSystemConfig.cmake)
 set(CMAKE_TOOLCHAIN_FILE cmake/ArduinoToolchain.cmake) # Arduino Toolchain
 
 
